logs/dag_id=dag/run_id=manual__2022-12-07T06:47:09.646061+00:00/task_id=create_table/attempt=1.log
[2022-12-07T06:47:13.560+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag.create_table manual__2022-12-07T06:47:09.646061+00:00 [queued]>
[2022-12-07T06:47:13.601+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag.create_table manual__2022-12-07T06:47:09.646061+00:00 [queued]>
[2022-12-07T06:47:13.606+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-12-07T06:47:13.608+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-12-07T06:47:13.612+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-12-07T06:47:13.662+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2022-12-07 06:47:09.646061+00:00
[2022-12-07T06:47:13.693+0000] {standard_task_runner.py:55} INFO - Started process 26388 to run task
[2022-12-07T06:47:13.714+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag', 'create_table', 'manual__2022-12-07T06:47:09.646061+00:00', '--job-id', '1357', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmpha21s1o3']
[2022-12-07T06:47:13.719+0000] {standard_task_runner.py:83} INFO - Job 1357: Subtask create_table
[2022-12-07T06:47:13.972+0000] {task_command.py:376} INFO - Running <TaskInstance: dag.create_table manual__2022-12-07T06:47:09.646061+00:00 [running]> on host 505aa50095aa
[2022-12-07T06:47:14.131+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=lofitravel
AIRFLOW_CTX_DAG_ID=dag
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-12-07T06:47:09.646061+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-07T06:47:09.646061+00:00
[2022-12-07T06:47:14.156+0000] {base.py:71} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-12-07T06:47:14.173+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS pairs(
            ticker_from VARCHAR(3) NOT NULL
        , parameters: None
[2022-12-07T06:47:14.174+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 4:         
                ^

[2022-12-07T06:47:14.192+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=dag, task_id=create_table, execution_date=20221207T064709, start_date=20221207T064713, end_date=20221207T064714
[2022-12-07T06:47:14.218+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 1357 for task create_table (syntax error at end of input
LINE 4:         
                ^
; 26388)
[2022-12-07T06:47:14.248+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-12-07T06:47:14.301+0000] {taskinstance.py:2623} INFO - 0 downstream tasks scheduled from follow-on schedule check
